--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Fruits" asp-action="Index">Fruit List</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Veggies" asp-action="Index">Veggies List</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
